Refactor for testability and DI